tests/ui/transmutability/unions/should_reject_contraction.stderr
error[E0277]: `Superset` cannot be safely transmuted into `Subset`
  --> $DIR/should_reject_contraction.rs:34:41
   |
LL |     assert::is_transmutable::<Superset, Subset>();
   |                                         ^^^^^^ at least one value of `Superset` isn't a bit-valid value of `Subset`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_reject_contraction.rs:12:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src, { Assume::SAFETY }>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
